# Project-Adam

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  INTEGRATION_PLAN.md  LICENSE  PLAN.md  README.md  adam_chat.py  api_server.py  architecture.md  config.yaml  config.yaml.bak  config.yaml.example  download_3b.py  generate.py  opencode.json  pyproject.toml  remotearchitecture.md  requirements-dev.txt  requirements.txt  start_adam.sh  train.bat  train.err  train_titans.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  ci.yml.bak
docs/: api.md  architecture.md  faq.md  memory.md  plan-diffmemory-v2.md  plan-diffmemory-v3.md  plan-diffmemory.md  plan-persona.md  plan-self-play.md  plan.md  setup.md  training.md  usage.md  wiring-audit.md
docs/papers/: README.md  miras.md  titans.md
models/: README.md
persona-studio.git.bak/: config  index  packed-refs
personas/: adam.md
src/project_adam/: __init__.py  __main__.py  agent.py  api.py  config.py  consolidator.py  encoder.py  language.py  mcp_server.py  metacog.py  persona.py  persona_manager.py  profiles.py  rl_core.py  search.py  selector.py  self_play.py  sfl.py  utils.py  (+1 more)
tests/: conftest.py  test_api.py  test_architecture.py  test_diffmemory.py  test_encoder.py  test_integration.py  test_memory.py  test_metacognitive.py  test_persona.py  test_profiles.py  test_search.py  test_sfl.py
tools/: README.md  adam_consolidate.md  adam_explain_entity.md  adam_get_status.md  adam_observe_entity.md  adam_query_knowledge.md  adam_self_play.md  adam_teach.md  adam_teach_fact.md  adam_teach_skill.md
(+16 files in other folders)
