[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "project-adam"
version = "1.4.0"
description = "COGNET conversational AI with per-user LoRA adaptation"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.44.0",
    "peft>=0.12.0",
    "safetensors>=0.4.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.5.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "gradio>=5.0.0",
    "ddgs>=9.14.0",
]

[project.optional-dependencies]
voice = ["edge-tts>=6.1.0", "sounddevice>=0.4.6", "miniaudio>=1.57"]
dev = ["pytest>=8.0.0", "pytest-mock>=3.14.0", "ruff>=0.6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]
"src/project_adam/__init__.py" = ["E402"]
"src/project_adam/agent.py" = ["E402"]

[project.scripts]
adam = "project_adam.__main__:main"
